# Novillex_CA_Backend

./: .gitignore  BOI_pdf_extract.py  apis.yaml  bank_names.txt  bank_statement_parsed.csv  debug_summary.py  extract_pdf.py  main.py  pyproject.toml  requirements.txt  test.ipynb  test_extract.py
api/endpoints/: cashflowPage.py  cashflow_chart.py  daily_balance_per_month.py  extract_statements.py  metadata.py  month_wise_analysis.py  monthly_balance_chart.py  monthly_debit_credit_chart.py  overview_details.py  supabase_test.py  transactions.py  upload_statement.py
bank_statement_parser/banks/: BOI_pdf_extract.py  kotak_pdf_extract.py
bank_statement_parser/base/: base_extractor.py
bank_statement_parser/utils/: bank_of_india_regex_patterns.json  extraction_core_process.py  kotak_mahindra_bank_regex_patterns.json  regex_loader.py
database/: crud.py  db.py  save_user_data.py
passwords/: ayush.txt
