[project]
name = "novillex-ca-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "psycopg2>=2.9.10",
    "pymupdf4llm>=0.0.25",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.2",
    "uvicorn>=0.34.2",
]
